--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
   <groupId>it.polimi.ingsw</groupId>
   <artifactId>GC16</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>GC16</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/alessandrozito98/ing-sw-2020-zito-sulpizi-zecchinello</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -71,5 +72,16 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <configuration>
+        <source>14</source>
+        <target>14</target>
+      </configuration>
+    </plugin>
+    </plugins>
   </build>
 </project>
+
