--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <packaging>jar</packaging>
 
   <name>GC16</name>
-  <!-- FIXME change it to the project's website -->
+  <!-- FIXME change it to the project's websit -->
   <url>https://github.com/alessandrozito98/ing-sw-2020-zito-sulpizi-zecchinello</url>
 
   <properties>
