--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,12 @@ GC16.iml
 
 #ignoring all coverage test not necessary
 /deliverables/report/*
-/deliverables/report/it.polimi.ingsw.model/*
-/deliverables/report/it.polimi.ingsw.model.God/*
-/deliverables/report/it.polimi.ingsw.controller/*
+!/deliverables/report/.css
+!/deliverables/report/.img
 !/deliverables/report/index.html
+/deliverables/report/it.polimi.ingsw.model/*
+!deliverables/report/it.polimi.ingsw.model.God/*
+!deliverables/report/it.polimi.ingsw.controller/*
 !/deliverables/report/it.polimi.ingsw.model.God/index.html
 !/deliverables/report/it.polimi.ingsw.model/index.html
 !/deliverables/report/it.polimi.ingsw.controller/index.html
